# sucb

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
sucb/: __init__.py  base.py  cb.py  decor.py  default.py
tests/: test_base.py
